Fixed spacing

--- a/scss/landing-page.scss
+++ b/scss/landing-page.scss
@@ -159,7 +159,7 @@ h2.subheader {
 	color: $bright-yellow;
 	margin: 0;
 	padding: 0;
-	margin-top: -1.5em;
+	margin-top: -1.2em;
 	font-size: 1.5em;
 	text-shadow: 1px 1px 2px rgba(0,0,0,.9);
 }
@@ -442,6 +442,10 @@ h2.subheader {
 
 	.feature-row {
 		background-size: 100% auto;
+	}
+
+	h2.subheader {
+		margin-top: -1.5em;
 	}
 
 
